# Recurrent-RSA-NPNLG

./: .gitignore  README.md  build_test_sets.py  data_loader.py  ev.py  eval_result.txt  evaluation.py  main.py  main_new_rsa.py  np_playground.py  printCocoCaptions.py  pyproject.toml  requirements.txt  train.py  ts2_clusters.json
bayesian_agents/: _joint_rsa.py  joint_rsa.py  rsaState.py  rsaWorld.py
data/models/: .gitattributes
data/results/: captions_val2014_fakecap_results.json
data/visual_genome_JSON/: region_descriptions_sample.json
evaluation/: main.py
evaluation/build_test_sets/: __init__.py  build_sets.py  load_vg_dataset.py  util.py  vg_types.py
evaluation/evaluate/: __init__.py
evaluation/evaluate/helpers/: evaluate_cluster.py
evaluation/evaluate/ts1/: evaluate_ts1.py
evaluation/evaluate/ts2/: evaluate_ts2.py
evaluation/init_models/: __init__.py  init_captioner.py  init_evaluator.py
recursion_schemes/: recursion_schemes.py
train/: Model.py  data_loader.py  encoder_decoder_models.py
train/image_captioning/: char_model.py
utils/: build_data.py  build_vocab.py  checkImage.py  compute_results.py  config.py  data_stream.py  find_pairs.py  generate_clusters.py  image_and_text_utils.py  image_utils.py  imagenet_utils.py  numpy_functions.py  sample.py  test_data.py  urls.py
utils/cocoCaptionWithSalanizPycocoevalcap/pycocoevalcap/: eval.py
utils/cocoCaptionWithSalanizPycocoevalcap/pycocotools/: coco.py
utils/cocoapi/PythonAPI/pycocotools/: _mask.c
utils/pycocotools/: coco.py  cocoeval.py
