[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["waron97 <winkler.aron5gmail.com>"]
readme = "README.md"
packages = [{include = "final_project"}]

[tool.poetry.scripts]
my-script = "main"

[tool.poetry.dependencies]
python = "3.10.10"
keras = "2.11.0"
matplotlib = "3.7.0"
more-itertools = "9.1.0"
nltk = "3.8.1"
numpy = "1.24.2"
pandas = "1.5.3"
pillow = "9.4.0"
requests = "2.28.1"
scipy = "1.10.1"
tensorflow-macos = "2.11.0"
torch = "1.13.1"
torchvision = "0.14.1"
tqdm = "4.64.1"


[tool.poetry.group.dev.dependencies]
pylance = "^0.3.13"
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
